update image link as well as many other directories

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -67,7 +67,7 @@
             bottom:0;
 
             overflow:hidden;
-            background:url('images/topvid.jpg');
+            background:url('public/images/topvid.jpg');
             background-size:100% 100%;
             background-size:cover;
         }
@@ -83,15 +83,15 @@
 
         <div class="buttons-wrap">
             
-            <a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/startOMX.sh%20&">Play</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">Play</a>
 
-            <a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/startCCOMX.sh%20&">Play w/ CC</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">Play w/ CC</a>
 
-            <a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/stopOMX.sh%202>/dev/null%20&">Stop</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&">Stop</a>
 
-            <a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/volumeUp.sh">Vol +</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeUp.sh">Vol +</a>
 
-            <a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/volumeDown.sh">Vol -</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeDown.sh">Vol -</a>
 
             <a href="file:///homepage.html?kbd=q">Reload</a>
 
