--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -85,7 +85,7 @@
             
             <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">Play</a>
 
-            <a href="http://downloads.martindigital.co/insta2.mp4">Play w/ CC</a>
+            <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">Play w/ CC</a>
 
             <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&">Stop</a>
 
