--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="initial-scale=1">
 
 		<title>The Works Kiosk</title>
-		<link href="/assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
 				
-		<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -46,8 +46,8 @@
 
 		<!-- TODO: Select version of jquery and link to CDN -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="/assets/js/script.min.js"></script>
-		<script src="/assets/js/ripple.min.js"></script>
+		<script src="assets/js/script.min.js"></script>
+		<script src="assets/js/ripple.min.js"></script>
 
 	</body>
 
