--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -10,7 +10,7 @@
 		<title>The Works Kiosk</title>
 		<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
 				
-		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+		<!-- <link rel="shortcut icon" type="image/ico" href="favicon.ico" /> -->
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 		<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
@@ -27,13 +27,13 @@
 <div class="video-controls_wrap">
 
 	<ul class="video-controls">
-		<li><a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/startOMX.sh%20&"><i class="material-icons">play_circle_outline</i></a></li>
-	   	<li><a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/startCCOMX.sh%20&"><i class="material-icons">closed_captions</i></a></li>
-	   	<li><a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/stopOMX.sh%202>/dev/null%20&"><i class="material-icons">stop</i></a></li>
-	    <li><a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/volumeUp.sh"><i class="material-icons">volume_up</i></a></li>
-	    <li><a href="file:///homepage.html?cmd=/media/Git/theWorks_Kiosk/volumeDown.sh"><i class="material-icons">volume_down</i></a></li>
-	    <li><a href="file:///homepage.html?kbd=q"><i class="material-icons">replay</i></a></li>
-	    <li><a href="file:///homepage.html?kbd=r"><i class="material-icons">settings_backup_restore</i></a></li>
+		<li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">Play</a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">Play w/ CC</a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&">Stop</a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeUp.sh">Vol +</a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeDown.sh">Vol -</a></li>
+        <li><a href="file:///homepage.html?kbd=q">Reload</a></li>
+        <li><a href="file:///homepage.html?kbd=r">Refresh</a></li>
     </ul>
 
 </div>
