--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -16,18 +16,20 @@
 		<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 	</head>
 
-	<body>
+	<body data-hijacking="off" data-animation="scaleDown">
 
 		
 
-		<div class="site-content ripple-effect">
+		<div class="site-content">
 			
 
 
 <div class="video-controls_wrap">
 
 	<ul class="video-controls">
-		<li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">Play</a></li>
+		<li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">
+		<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+		</a></li>
         <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">Play w/ CC</a></li>
         <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&">Stop</a></li>
         <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeUp.sh">Vol +</a></li>
@@ -38,7 +40,12 @@
 
 </div>
 
-<div class="video-placeholder"></div>
+<div class="control-center">
+	
+	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="cc-button"><img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/></a>
+	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button">CC</a>
+
+</div>
 
 
 
@@ -49,7 +56,6 @@
 		<!-- TODO: Select version of jquery and link to CDN -->
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
 		<script src="assets/js/script.min.js"></script>
-
 	</body>
 
 </html>
