Removing modal test

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -44,32 +44,9 @@
 	
 	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="cc-button"><img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/></a>
 	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button">CC</a>
+	<a href="#" class="cc-button">Modal</a>
 
-		<div class="cd-modal-action">
-			<a href="#0" class="btn" data-type="modal-trigger">Fire Modal Window</a>
-			<span class="cd-modal-bg"></span>
-		</div> <!-- cd-modal-action -->
 </div>
-
-
-
-		<div class="cd-modal">
-			<div class="cd-modal-content">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
-				</p>
-
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
-				</p>
-
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
-				</p>
-			</div> <!-- cd-modal-content -->
-		</div> <!-- cd-modal -->
-
-		<a href="#0" class="cd-modal-close">Close</a>
 
 
 
@@ -80,8 +57,6 @@
 		<!-- TODO: Select version of jquery and link to CDN -->
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
 		<script src="assets/js/script.min.js"></script>
-		<script src="assets/js/velocity.min.js"></script>
-		<script src="assets/js/modal.min.js"></script>
 
 	</body>
 
