Adjusted video size

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -30,12 +30,15 @@
 		<li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&">
 		<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 		</a></li>
-        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">Play w/ CC</a></li>
-        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&">Stop</a></li>
-        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeUp.sh">Vol +</a></li>
-        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeDown.sh">Vol -</a></li>
-        <li><a href="file:///homepage.html?kbd=q">Reload</a></li>
-        <li><a href="file:///homepage.html?kbd=r">Refresh</a></li>
+
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">	
+        <img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/></a></li>
+
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&"><img src="assets/images/ic_stop_white_48px.svg" class="icon"/></a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeUp.sh"><img src="assets/images/ic_volume_up_white_48px.svg" class="icon"/></a></li>
+        <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/volumeDown.sh"><img src="assets/images/ic_volume_off_white_48px.svg" class="icon"/></a></li>
+        <li><a href="file:///homepage.html?kbd=r"><img src="assets/images/ic_replay_white_48px.svg" class="icon"/></a></li>
+        <li><a href="file:///homepage.html?kbd=q"><img src="assets/images/ic_loop_white_48px.svg" class="icon"/></a></li>
     </ul>
 
 </div>
@@ -43,8 +46,8 @@
 <div class="control-center">
 	
 	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="cc-button"><img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/></a>
-	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button">CC</a>
-	<a href="#" class="cc-button">Modal</a>
+	<!-- <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button">CC</a>
+	<a href="#" class="cc-button">Modal</a> -->
 
 </div>
 
