updating background change and updating control sidebar

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="initial-scale=1">
 
 		<title>The Works Kiosk</title>
-		<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="assets/css/screen.css" rel="stylesheet" type="text/css" media="all"/>
 				
 		<!-- <link rel="shortcut icon" type="image/ico" href="favicon.ico" /> -->
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
