Updating styles to test full grid

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="initial-scale=1">
 
 		<title>The Works Kiosk</title>
-		<link href="assets/css/screen.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
 				
 		<!-- <link rel="shortcut icon" type="image/ico" href="favicon.ico" /> -->
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
@@ -66,6 +66,13 @@
 
 
 	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+	
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+
 
 </div>
 
