Updating styles for full grid

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -64,6 +64,7 @@
 
 	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button"><img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/></a>
 
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
 
 	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
 	
