Updating layout and styles

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -62,17 +62,13 @@
 	
 	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="cc-button"><img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/></a>
 
-	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&" class="cc-button"><img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/></a>
+	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="cc-button"><img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/></a>
 
-	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3"><img src="assets/images/works-kiosk-modal-button.png"/></a>
 
-	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
-	
-	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3"><img src="assets/images/works-kiosk-modal-button.png"/></a>
 
-	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
-
-	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3">Modal</a>
+	<a href="#" class="cc-button md-trigger md-setperspective" data-modal="modal-3"><img src="assets/images/works-kiosk-modal-button.png"/></a>
 
 
 </div>
