--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -123,7 +123,7 @@
 			
 
 		<!-- TODO: Select version of jquery and link to CDN -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="/assets/js/jquery.1.11.3.min.js"></script>
 		<script src="/assets/js/script.min.js"></script>
 		<script src="/assets/js/slider.min.js"></script>
 
