--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -12,7 +12,6 @@
 				
 		<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 	</head>
 
 	<body>
@@ -25,7 +24,7 @@
 
 
 
-<section class="cd-hero">
+<div class="cd-hero">
 
 	<ul class="cd-hero-slider is-typeset">
 
@@ -116,13 +115,14 @@
 		</nav> 
 	</div> <!-- .cd-slider-nav -->
 
-</section> <!-- .cd-hero -->
+</div> <!-- .cd-hero -->
 
 		</div>	
 
 			
 
 		<!-- TODO: Select version of jquery and link to CDN -->
+		<script src="/assets/js/modernizr.min.js"></script>
 		<script src="/assets/js/jquery.1.11.3.min.js"></script>
 		<script src="/assets/js/script.min.js"></script>
 		<script src="/assets/js/slider.min.js"></script>
