--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -33,7 +33,7 @@
 
         <li>
         <!-- <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startCCOMX.sh%20&">-->
-        <a href="file:///homepage.html?kbd=s">
+        <a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/toggleSubtitles.sh">
         <img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/></a></li>
 		</a>
         <li><a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/stopOMX.sh%202>/dev/null%20&"><img src="assets/images/ic_stop_white_48px.svg" class="icon"/></a></li>
