Updating file paths

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="initial-scale=1">
 
 		<title>The Works Kiosk V.03</title>
-		<link href="/assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="assets/css/screen.min.css" rel="stylesheet" type="text/css" media="all"/>
 				
-		<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 		<!-- TODO: Download a custom build of modernizer to suit the project -->
 	</head>
 
@@ -82,9 +82,9 @@
 			
 
 		<!-- TODO: Select version of jquery and link to CDN -->
-		<script src="/assets/js/modernizr.min.js"></script>
-		<script src="/assets/js/jquery.1.11.3.min.js"></script>
-		<script src="/assets/js/script.min.js"></script>
+		<script src="assets/js/modernizr.min.js"></script>
+		<script src="assets/js/jquery.1.11.3.min.js"></script>
+		<script src="assets/js/script.min.js"></script>
 	</body>
 
 </html>
