Updating styles and scripts

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -53,7 +53,7 @@
 
 	        <li>
 		        <a href="file:///homepage.html?kbd=q">
-		        	<img src="assets/images/ic_loop_white_48px.svg" class="icon"/>
+		        	<img src="assets/images/ic_loop_white_48px.svg" class="icon hidden"/>
 	       		</a>
 	        </li>
 
@@ -61,7 +61,7 @@
 
 	</div>
 
-	<div class="video-preview">
+	<div class="video-preview bg">
 
 		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="video-preview_play">
 			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
@@ -84,6 +84,7 @@
 		<!-- TODO: Select version of jquery and link to CDN -->
 		<script src="assets/js/modernizr.min.js"></script>
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
+		<script src="assets/js/fastclick.min.js"></script>
 		<script src="assets/js/script.min.js"></script>
 	</body>
 
