Adding some touch support

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -85,6 +85,7 @@
 		<script src="assets/js/modernizr.min.js"></script>
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
 		<script src="assets/js/fastclick.min.js"></script>
+		<script src="assets/js/quo.standalone.min.js"></script>
 		<script src="assets/js/script.min.js"></script>
 	</body>
 
