Updating styles and adding title

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -63,7 +63,7 @@
 
 	<div class="video-preview bg">
 
-		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="video-preview_play">
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="play">
 			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 		</a>
 
@@ -71,6 +71,9 @@
 
 	<div class="video-info">
 
+		<div class="title">
+			<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_LineShaft/startOMX.sh%20&" class="play"></a>
+		</div>
 
 	</div>
 
