--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -87,8 +87,9 @@
 		<!-- TODO: Select version of jquery and link to CDN -->
 		<script src="assets/js/modernizr.min.js"></script>
 		<script src="assets/js/jquery.1.11.3.min.js"></script>
+		<script src="assets/js/touch-emulator.min.js"></script>
 		<script src="assets/js/fastclick.min.js"></script>
-		<script src="assets/js/quo.standalone.min.js"></script>
+		<!-- <script src="assets/js/quo.standalone.min.js"></script> -->
 		<script src="assets/js/script.min.js"></script>
 	</body>
 
