Adding js transitions

--- a/LineShaftKiosk/index.html
+++ b/LineShaftKiosk/index.html
@@ -122,7 +122,7 @@
 
 			</div>
 
-			<div class="cd-section">
+			<div class="cd-section no-csstransitions">
 				<div class="cd-modal-action">
 					<a href="#0" class="btn" data-type="modal-trigger">+ Quick Fact</a>
 					<span class="cd-modal-bg"></span>
